--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "sucrase": "^3.35.0"
   },
   "dependencies": {
+    "dotenv": "^16.4.1",
     "express": "^4.18.2",
     "mongoose": "^8.1.1",
     "morgan": "^1.10.0"
