--- a/package.json
+++ b/package.json
@@ -18,10 +18,13 @@
     "sucrase": "^3.35.0"
   },
   "dependencies": {
+    "aws-sdk": "^2.1555.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.1",
     "express": "^4.18.2",
     "mongoose": "^8.1.1",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
+    "multer-s3": "^2.10.0"
   }
 }
