--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "sucrase": "^3.35.0"
   },
   "dependencies": {
+    "@turf/turf": "^6.5.0",
     "aws-sdk": "^2.1555.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.1",
