--- a/api/package.json
+++ b/api/package.json
@@ -24,6 +24,7 @@
     "dotenv": "^16.4.1",
     "express": "^4.18.2",
     "lodash": "^4.17.21",
+    "moment": "^2.30.1",
     "mongoose": "^8.1.1",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
