--- a/web/package.json
+++ b/web/package.json
@@ -8,6 +8,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.6.8",
     "moment": "^2.30.1",
     "react": "^18.2.0",
     "react-big-calendar": "^1.11.3",
@@ -17,6 +18,7 @@
     "react-scripts": "5.0.1",
     "redux": "^5.0.1",
     "redux-saga": "^1.3.0",
+    "rsuite": "^5.59.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
