--- a/web/package.json
+++ b/web/package.json
@@ -9,6 +9,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.8",
+    "immer": "^10.0.4",
     "moment": "^2.30.1",
     "react": "^18.2.0",
     "react-big-calendar": "^1.11.3",
