--- a/app/package.json
+++ b/app/package.json
@@ -11,8 +11,18 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.23.1",
+    "axios": "^1.7.2",
+    "immer": "^10.1.1",
+    "moment": "^2.30.1",
     "react": "18.2.0",
     "react-native": "0.74.0",
+    "react-native-bottom-sheet": "^1.0.3",
+    "react-native-gesture-handler": "^2.16.2",
+    "react-native-linear-gradient": "^2.8.3",
+    "react-native-paper": "^5.12.3",
+    "react-native-reanimated": "^3.11.0",
+    "react-native-simple-modal": "^9.0.1",
+    "react-native-vector-icons": "^10.1.0",
     "react-redux": "^9.1.1",
     "reactotron-react-native": "^5.1.6",
     "reactotron-redux": "^3.1.9",
