--- a/api/package.json
+++ b/api/package.json
@@ -28,6 +28,7 @@
     "mongoose": "^8.1.1",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
-    "multer-s3": "^2.10.0"
+    "multer-s3": "^2.10.0",
+    "react-icons": "^5.2.1"
   }
 }
