--- a/app/package.json
+++ b/app/package.json
@@ -1,52 +1,40 @@
 {
   "name": "app",
-  "version": "0.0.1",
-  "private": true,
+  "version": "1.0.0",
+  "main": "expo/AppEntry.js",
   "scripts": {
-    "android": "react-native run-android",
-    "ios": "react-native run-ios",
-    "lint": "eslint .",
-    "start": "react-native start",
-    "test": "jest"
+    "start": "expo start",
+    "android": "expo start --android",
+    "ios": "expo start --ios",
+    "web": "expo start --web"
   },
   "dependencies": {
+    "@gorhom/bottom-sheet": "^4.6.3",
+    "@mdi/js": "^7.4.47",
+    "@mdi/react": "^1.6.1",
     "@react-native-async-storage/async-storage": "^1.23.1",
     "axios": "^1.7.2",
+    "expo": "~51.0.9",
+    "expo-font": "~12.0.6",
+    "expo-linear-gradient": "~13.0.2",
+    "expo-status-bar": "~1.12.1",
     "immer": "^10.1.1",
     "moment": "^2.30.1",
     "react": "18.2.0",
-    "react-native": "0.74.0",
-    "react-native-bottom-sheet": "^1.0.3",
-    "react-native-gesture-handler": "^2.16.2",
-    "react-native-linear-gradient": "^2.8.3",
+    "react-native": "0.74.1",
+    "react-native-gesture-handler": "~2.16.1",
     "react-native-paper": "^5.12.3",
-    "react-native-reanimated": "^3.11.0",
-    "react-native-simple-modal": "^9.0.1",
+    "react-native-reanimated": "~3.10.1",
     "react-native-vector-icons": "^10.1.0",
-    "react-redux": "^9.1.1",
-    "reactotron-react-native": "^5.1.6",
+    "react-redux": "^9.1.2",
+    "reactotron-react-native": "^5.1.7",
     "reactotron-redux": "^3.1.9",
     "redux": "^5.0.1",
-    "redux-saga": "^1.3.0"
+    "redux-saga": "^1.3.0",
+    "styled-components": "^5.3.11"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0",
-    "@babel/preset-env": "^7.20.0",
-    "@babel/runtime": "^7.20.0",
-    "@react-native/babel-preset": "0.74.81",
-    "@react-native/eslint-config": "0.74.81",
-    "@react-native/metro-config": "0.74.81",
-    "@react-native/typescript-config": "0.74.81",
-    "@types/react": "^18.2.6",
-    "@types/react-test-renderer": "^18.0.0",
-    "babel-jest": "^29.6.3",
-    "eslint": "^8.19.0",
-    "jest": "^29.6.3",
-    "prettier": "2.8.8",
-    "react-test-renderer": "18.2.0",
-    "typescript": "5.0.4"
+    "@babel/core": "^7.20.0"
   },
-  "engines": {
-    "node": ">=18"
-  }
+  "private": true
 }
