--- a/api/package.json
+++ b/api/package.json
@@ -20,9 +20,11 @@
   "dependencies": {
     "@turf/turf": "^6.5.0",
     "aws-sdk": "^2.1555.0",
+    "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.1",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
     "moment": "^2.30.1",
     "mongoose": "^8.1.1",
