--- a/app/package.json
+++ b/app/package.json
@@ -13,6 +13,9 @@
     "@mdi/js": "^7.4.47",
     "@mdi/react": "^1.6.1",
     "@react-native-async-storage/async-storage": "^1.23.1",
+    "@react-navigation/bottom-tabs": "^6.5.20",
+    "@react-navigation/native": "^6.1.17",
+    "@react-navigation/stack": "^6.3.29",
     "axios": "^1.7.2",
     "expo": "~51.0.9",
     "expo-font": "~12.0.6",
@@ -26,6 +29,8 @@
     "react-native-gesture-handler": "~2.16.1",
     "react-native-paper": "^5.12.3",
     "react-native-reanimated": "~3.10.1",
+    "react-native-safe-area-context": "^4.10.5",
+    "react-native-screens": "^3.32.0",
     "react-native-vector-icons": "^10.1.0",
     "react-redux": "^9.1.2",
     "reactotron-react-native": "^5.1.7",
