--- a/app/package.json
+++ b/app/package.json
@@ -13,6 +13,7 @@
     "@mdi/js": "^7.4.47",
     "@mdi/react": "^1.6.1",
     "@react-native-async-storage/async-storage": "^1.23.1",
+    "@react-native-community/datetimepicker": "^8.1.1",
     "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/stack": "^6.3.29",
@@ -20,14 +21,18 @@
     "expo": "~51.0.9",
     "expo-font": "~12.0.6",
     "expo-linear-gradient": "~13.0.2",
+    "expo-location": "~17.0.1",
     "expo-status-bar": "~1.12.1",
     "immer": "^10.1.1",
     "lodash": "^4.17.21",
     "moment": "^2.30.1",
     "react": "18.2.0",
     "react-native": "0.74.1",
+    "react-native-date-picker": "^5.0.4",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-paper": "^5.12.3",
+    "react-native-paper-dates": "^0.22.11",
+    "react-native-paper-dropdown": "^1.0.7",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "^4.10.5",
     "react-native-screens": "^3.32.0",
